--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "material-table": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
