--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "5.11.0",
-    "@mui/material": "5.11.7",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "material-react-table": "^1.9.1",
     "material-table": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "sort-by": "^1.2.0"
