--- a/package.json
+++ b/package.json
@@ -18,22 +18,26 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@reduxjs/toolkit": "^1.9.3",
+    "chart.js": "^4.3.0",
     "localforage": "^1.10.0",
     "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
     "material-react-table": "^1.9.1",
     "material-table": "^2.0.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.2",
     "react-yandex-maps": "^4.6.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.2.0",
     "@types/react": "^18.0.28",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
